--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ REACT_APP_FIREBASE_MESSAGING_SENDER_ID=738917492430
 REACT_APP_FIREBASE_APP_ID=1:738917492430:web:04bbb2d3b6afd7ab2dd29f
 REACT_APP_MP_PUBLIC_KEY=APP_USR-33acd0f1-eddd-41b5-92c9-383b71ff7e25
 REACT_APP_EMAIL_ADMIN=admin@gmail.com
+REACT_APP_BACKEND_URL=https://golf-backend-production-ad4e.up.railway.app
+# https://golf-backend-production-ad4e.up.railway.app
