--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ REACT_APP_FIREBASE_PROJECT_ID=golf-e5a64
 REACT_APP_FIREBASE_STORAGE_BUCKET=golf-e5a64.firebasestorage.app
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=738917492430
 REACT_APP_FIREBASE_APP_ID=1:738917492430:web:04bbb2d3b6afd7ab2dd29f
-REACT_APP_MP_PUBLIC_KEY=APP_USR-33acd0f1-eddd-41b5-92c9-383b71ff7e25
+REACT_APP_MP_PUBLIC_KEY=APP_USR-44bc3318-6f5b-4e0a-9e45-31f23c49922a
 REACT_APP_EMAIL_ADMIN=admin@gmail.com
-REACT_APP_BACKEND_URL=https://golf-backend-production-ad4e.up.railway.app
+REACT_APP_BACKEND_URL=http://localhost:3001
 # https://golf-backend-production-ad4e.up.railway.app
